sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:16: error: not found: value swapped
  }while(ecart>1 || swapped)
                    ^